--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,6 +1,6 @@
 schemaVersion: 2.1.0
 metadata:
-  name: pycharm-community
+  name: pycharm-community-test
 commands:
   - id: init-container-command
     apply:
