--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,6 +1,13 @@
 schemaVersion: 2.1.0
 metadata:
   name: pycharm-community-test
+commands:
+  - id: init-container-command
+    apply:
+      component: che-pycharm-injector
+events:
+  preStart:
+    - init-container-command  
 components:
   - name: che-pycharm-runtime-description
     container:
