--- a/devfile.yaml
+++ b/devfile.yaml
@@ -2,12 +2,12 @@ schemaVersion: 2.1.0
 metadata:
   name: pycharm-community-test
 commands:
-  - id: init-container-command
+  - id: on-init-command
     apply:
       component: che-pycharm-injector
 events:
   preStart:
-    - init-container-command  
+    - on-init-command
 components:
   - name: che-pycharm-runtime-description
     container:
